src/objects/ADvendio__ContentAdserverIDAssignment__c.object
<CustomObject>
    <description>This object is needed for a n - n relationship between the objects &quot;Content&quot; and &quot;AdserverIDs&quot;.</description>
    <fields>
        <fullName>ADvendio__AdServerID__c</fullName>
        <description>This field shows the related Adserver ID.</description>
        <inlineHelpText>This field shows the related Adserver ID.</inlineHelpText>
        <label>AdServer ID</label>
        <referenceTo>ADvendio__AdServer_ID__c</referenceTo>
        <relationshipLabel>Assigned Content</relationshipLabel>
        <relationshipName>AdserverIDAssignments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ADvendio__Content__c</fullName>
        <description>This field shows the related content.</description>
        <inlineHelpText>This field shows the related content.</inlineHelpText>
        <label>Content</label>
        <referenceTo>ADvendio__Content__c</referenceTo>
        <relationshipLabel>Assigned AdserverIDs</relationshipLabel>
        <relationshipName>ContentAssignments</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>P7S1_IdOld__c</fullName>
        <description>Salesforce ID aus einer anderen/alten Org imRahmen einer Datenmigration</description>
        <inlineHelpText>Salesforce ID aus einer anderen/alten Org imRahmen einer Datenmigration</inlineHelpText>
        <label>P7S1_IdOld</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>Content AdserverID Assignment</label>
    <listViews>
        <fullName>ADvendio__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CAA-{00000}</displayFormat>
        <label>Content AdserverID Assignment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Content AdserverID Assignments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>